--- a/public-styled/advancements/rewards/index.html
+++ b/public-styled/advancements/rewards/index.html
@@ -700,7 +700,7 @@ section h2::before{
       <div class="row">
         <div class="chestCard">
           <h4>Lucky Chests</h4>
-          <p>Start at Level 1, 5 spins, 40% chance to level up each spin (never down), cap Level 6. Final click reveals badge points.</p>
+          <p>Start at Level 1, 5 spins, never go down, cap Level 6. Final click reveals badge points.</p>
           <div class="countRow">
             <div class="countPill"><span>Count</span><b id="luckyCount">—</b></div>
             <button class="openBtn" id="openLuckyBtn">Open</button>
@@ -709,7 +709,7 @@ section h2::before{
 
         <div class="chestCard">
           <h4>Gold Chests</h4>
-          <p>Contains only gold, random between 5,000 and 100,000.</p>
+          <p>Contains only gold, random amount based on activity.</p>
           <div class="countRow">
             <div class="countPill"><span>Count</span><b id="goldChestCount">—</b></div>
             <button class="openBtn" id="openGoldBtn">Open</button>
@@ -718,7 +718,7 @@ section h2::before{
 
         <div class="chestCard">
           <h4>Level Up Chests</h4>
-          <p>7 variants: scout, tenderfoot, 2class, 1class, star, life, eagle. Timed opening animations.</p>
+          <p>7 variants, one per rank: scout, tenderfoot, 2class, 1class, star, life, eagle. Timed opening animations.</p>
           <div class="countRow">
             <div class="countPill"><span>Available</span><b id="levelUpTotal">—</b></div>
             <button class="openBtn" id="openLevelUpBtn">Open</button>
@@ -731,7 +731,6 @@ section h2::before{
   <!-- Fullscreen overlay -->
   <div id="overlay" class="overlay">
     <div id="openStage" class="openStage" title="Click anywhere on this screen to use a spin / progress the opening">
-      <button id="closeX" class="closeX" aria-label="Close">×</button>
 
       <div class="stageTitle">
         <div id="stageLeft">Lucky Chest</div>
@@ -753,7 +752,7 @@ section h2::before{
       </div>
 
       <div id="bigText" class="bigText">Click to Spin (5)</div>
-      <div id="hint" class="hint">Lucky Chest • 40% level-up chance</div>
+      <div id="hint" class="hint">Lucky Chest • Only Go Up</div>
 
       <div id="rewardCard" class="rewardCard">
         <div id="rewardBig" class="rewardBig">Reward</div>
@@ -869,7 +868,7 @@ section h2::before{
 
     // Lucky rewards table from your spec (points ranges vary by finalLevel + rarity)
     function pointsFor(finalLevel, rarity){
-      if (finalLevel === 1) return randInt(50,150); // always common in selection logic
+      if (finalLevel === 1) return randInt(50,150);
       if (finalLevel === 2){
         if (rarity === "Common") return randInt(100,200);
         if (rarity === "Uncommon") return randInt(50,75);
@@ -893,11 +892,11 @@ section h2::before{
         if (rarity === "Legendary") return randInt(1,3);
       }
       if (finalLevel === 6){
-        if (rarity === "Common") return randInt(1000,1250);
+        if (rarity === "Common") return randInt(1100,1375);
         if (rarity === "Uncommon") return randInt(350,475);
         if (rarity === "Rare") return randInt(175,210);
         if (rarity === "Epic") return randInt(90,120);
-        if (rarity === "Legendary") return randInt(5,25);
+        if (rarity === "Legendary") return randInt(5,20);
       }
       return randInt(50,150);
     }
@@ -931,9 +930,9 @@ section h2::before{
       tenderfoot: 4,
       "2class": 6,
       "1class": 8,
-      star: 12,
-      life: 15,
-      eagle: 30
+      star: 10,
+      life: 12,
+      eagle: 20
     };
 
     // =========================
@@ -1368,7 +1367,7 @@ section h2::before{
       const before = state.lucky.level;
 
       let leveled = false;
-      if (state.lucky.level < 6 && Math.random() < 0.40){
+      if (state.lucky.level < 6 && Math.random() < 0.4573){
         state.lucky.level++;
         leveled = true;
       }
